# 2.5D-FPS-Walker

./: .gitignore  CMakeLists.txt  README.md  simpleFPS.rc  simpleFPS.sln
Engine/headers/: Colors.h  EngineLib.h  Game.h  Map.h  Player.h
Engine/source/: Game.cpp  Map.cpp  Player.cpp
Engine/source/Input/: Input.cpp  InputCommand.h
Engine/source/Renderer/: Renderer.cpp  Renderer.h
Engine/source/Tools/: FileManager.cpp  FileManager.h
Engine/source/Types/: Colors.cpp  EngineLib.cpp
Engine/source/Windows/: WindowApp.cpp
Game/: Main.cpp  readme.txt
Levels/: TestLevel1 - копия.lvl  TestLevel1.lvl
headers/: Colors.h  EngineLib.h  GameConfig.h  Input.h  Player.h  Renderer.h  WindowApp.h
simpleFPS/: EngineLib.cpp  EngineLib.h  GameConfig.cpp  GameConfig.h  Map.cpp  Map.h  Player.h  Renderer.cpp  Renderer.h  Resource.h  simpleFPS.cpp  simpleFPS.rc  simpleFPS.sln
source/: Colors.cpp  EngineLib.cpp  Game.cpp  GameConfig.cpp  Input.cpp  InputCommand.cpp  Main.cpp  Player.cpp  Renderer.cpp  WindowApp.cpp  simpleFPS.cpp
